fix overflow

--- a/src/shared/styles/layout/app.scss
+++ b/src/shared/styles/layout/app.scss
@@ -22,10 +22,10 @@
   width: 100%;
 }
 
-.l-scroll-panel {
-  min-height: 0;
-  overflow: visible;
-}
+// .l-scroll-panel {
+//   min-height: 0;
+//   overflow: visible;
+// }
 
 .l-center {
   display: flex;
